deploy/namespaces/pompetrack-core/ingress/01-pompetrack-core-lan-only-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: pompetrack-core
spec:
  ipAllowList:
    sourceRange:
      - 192.168.2.0/24
      - 192.168.3.0/24
      - 10.42.0.0/16
      - 10.43.0.0/16
      - 82.65.187.211
