deploy/namespaces/pompetrack-core/ingress/03-pompetrack-core-streamlit-ui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: streamlit-ui
  namespace: pompetrack-core
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`streamlit.lan`) || Host(`192.168.2.88.nip.io`)
      kind: Rule
      middlewares:
        - name: lan-only
          namespace: pompetrack-core 
      services:
        - name: pompetrack-core-streamlit-ui
          port: 8501
