deploy/namespaces/pompetrack-core/ingress/04-pompetrack-core-ingestion-strenght-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingestion-strenght-public
  namespace: pompetrack-core
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ingestion.lan`) && PathPrefix(`/ingest/strenght`)
      kind: Rule
      services:
        - name: pompetrack-core-ingestion
          port: 80
