deploy/namespaces/pompetrack-core/ingress/05-pompetrack-core-ingestion-iphone-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingestion-iphone-public
  namespace: pompetrack-core
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ingestion.lan`) && PathPrefix(`/ingest/iphone_api`)
      kind: Rule
      services:
        - name: ingestion
          port: 80
